--- a/src/sass/cv.sass
+++ b/src/sass/cv.sass
@@ -1,102 +1,98 @@
-@keyframes rotation
-    0%
-        transform: rotate(0deg)
-    100%
-        transform: rotate(360deg)
+@font-face
+    font-family: 'Coves'
+    src: url("@/assets/font/Coves Light.otf") format("opentype")
+    font-weight: 300
+    font-style: normal
 
-#CVloaderBG
-    top: 0
-    width: 100vw
-    height: 100vh
-    position: absolute
-    background-color: #DDD
-    z-index: 11
-    justify-content: center
-    text-align: center
+@font-face
+    font-family: 'Cove'
+    src: url("@/assets/font/Coves Light.otf") format("opentype")
+    font-weight: 200
 
-.loader
-    width: 72px
-    height: 72px
-    border: 5px solid #000
-    border-bottom-color: transparent
-    border-radius: 50%
-    display: inline-block
-    box-sizing: border-box
-    animation: rotation 1s linear infinite
-    margin-top: 50vh
+@font-face
+    font-family: 'Coves'
+    src: url("@/assets/font/Coves Bold.otf") format("opentype")
+    font-weight: 700
+    font-weight: bold
 
-.hidden
-    visibility: hidden
-    opacity: 0
-    transition: visibility 0s 2s, opacity 2s linear
+@font-face
+    font-family: 'Coves'
+    src: url("@/assets/font/Coves Bold.otf") format("opentype")
+    font-weight: 500
+    font-weight: normal
 
-#webgl
+// ==========
+
+#webglCV
     position: fixed
     top: 0
     left: 0
     outline: none
-    z-index: 10
+    z-index: -1
+
+// ==========
 
 .section
     font-family: 'Coves', sans-serif
     align-items: center
     text-align: center
-    height: 100vh
+    min-height: 90vh
     position: relative
     text-transform: uppercase
-    -webkit-text-stroke: 0.5px gray
+    color: #EEE
+    margin-bottom: 5%
 
-.section:nth-child(odd)
-    -webkit-text-stroke: 0.5px black
-    color: white
-    box-shadow: none
+// ==========
 
 h1
     font-family: 'Coves', sans-serif
     font-weight: bold
-    font-size: 5em
-    padding-top: 2%
+    font-size: 4.5em
+    padding-top: 1%
+    margin: 2%
 
 h2
     font-family: 'Coves', sans-serif
     font-weight: 500
-    font-size: 4em
-    padding-top: 1%
+    font-size: 3.5em
+    padding-top: 0.5%
+    color: #DDD
+    margin: 2%
 
 h3
     font-family: 'Coves', sans-serif
     font-size: 2em
     padding-top: 0.5%
+    color: #DDD
+    margin: 2%
 
 h4
     font-family: 'Coves', sans-serif
     font-size: 1.5em
     padding-top: 0.1%
-    font-style: italic
+    color: #CCC
+    margin: 1%
 
 a
     position: relative
-    z-index: 10
+    text-decoration: none
+    color: gray
+a:hover
+    color: white
 
-.blackBG
-    content: " "
-    position: absolute
-    background-color: rgba(10,10,10, 0.3)
-    z-index: auto
-    top: 5vh
-    left: 32.5vw
-    width: 35%
-    height: 90%
+hr
+    width: 70%
+    margin-bottom: 2%
+
+// ==========
 
 .whiteBG
-    content: " "
-    position: absolute
-    background-color: rgba(150, 150, 150, 0.3)
-    z-index: auto
-    top: 5vh
-    left: 32.5vw
-    width: 35%
-    height: 90%
+    background-color: rgba(180, 180, 180, 0.2)
+    margin-left: 25%
+    margin-right: 25%
+    border-radius: 20px
+
+// ==========    
 
 #header
     img
@@ -105,119 +101,55 @@ a
     section
         position: relative
         justify-content: center
-    .whiteBG
-        content: " "
-        position: absolute
-        z-index: auto
-        top: 49vh
-        left: 31.5vw
-        width: 35%
-        height: 35%
+        margin-top: 35vh
 
 #prog
     h2
         padding-top: 5%
         position: inherit
-        z-index: 10
+
     table
         position: absolute
-        z-index: 9
-        width: 75%
-        height: 70%
-        top: 20vh
-        left: 10vw
+        width: 100%
+        height: 50%
         font-size: 1.7em
-    .blackBG
-        content: " "
-        position: absolute
-        background-color: rgba(0.1,0.1,0.1, 0.3)
-        z-index: auto
-        top: 5vh
-        left: 10vw
-        width: 80%
-        height: 90%
+        margin-top: 10vh
+
+#diplome,#pro,#projet
+    h2
+        padding-top: 5%
+        position: inherit
+    section
+        h3
+            font-size: 3em
+        h4
+            font-size: 1.5em
+    :last-child
+        padding: 1%
 
 #diplome
-    h2
-        padding-top: 5%
-        position: inherit
-        z-index: 10
     section
         position: relative
-        right: 17.5%
-        margin-top: 5%
+        margin-top: 9%
         justify-content: center
-        h3
-            font-size: 3em
-        h4
-            font-size: 1.5em
-    section:nth-child(odd)
-        left: 17.5%
-
-#projet
-    h2
-        padding-top: 5%
-        position: inherit
-        z-index: 10
-    section
-        position: relative
-        right: 17.5%
-        margin-top: 2%
-        justify-content: center
-        h3
-            font-size: 3em
-        h4
-            font-size: 1.5em
-            a
-                img
-                    width: 2%
-                    filter: brightness(0.8)
-                img:hover
-                    filter: brightness(1)
-    section:nth-child(odd)
-        left: 17.5%
 
 #pro
-    h2
-        padding-top: 5%
-        position: inherit
-        z-index: 10
     section
         position: relative
-        right: 17.5%
         margin-top: 5%
         justify-content: center
-        h3
-            font-size: 3em
-        h4
-            font-size: 1.5em
-            a
-                text-decoration: none
-                color: gray
-            a:hover
-                color: black
-    section:nth-child(odd)
-        left: 17.5%
 
-#hobbies
-    justify-content: space-around
-    h2
-        padding-top: 5%
-        position: inherit
-        z-index: 10
+#projet
     section
         position: relative
-        right: 17.5%
-        margin-top: 3%
+        margin-top: 5%
         justify-content: center
-    section:nth-child(odd)
-        left: 17.5%
 
 #footer
     h2
         padding-top: 5%
         position: inherit
-        z-index: 10
+
     #logo
         display: flex
         justify-content: space-around
@@ -227,14 +159,8 @@ a
             filter: brightness(0.9)
         img:hover
             filter: brightness(1)
-    a
-        text-decoration: none
-        color: black
-    a:hover
-        color: gray
-    #return
-        position: relative
-        top: 100px
+
+// ==========   
 
 @media screen and (max-width: 900px) and (min-width: 600px)
 
