--- a/src/sass/projet.sass
+++ b/src/sass/projet.sass
@@ -1,18 +1,15 @@
 h2
     text-align: center
     color: #eee
-    margin-top: 10%
+    margin-top: 5%
 
-#BG
-    content: " "
-    width: 100%
-    height: 100%
-    position: fixed
-    top: 0
-    left: 0
-    outline: none
-    z-index: -1
-    background-color: #111
+#contact
+    img
+        display: block
+        margin-left: auto
+        margin-right: auto
+        margin-top: 5%
+        margin-bottom: 5%
 
 #content-l
     background-color: rgba(255, 255, 255, 0.1)
