--- a/src/sass/pf.sass
+++ b/src/sass/pf.sass
@@ -4,13 +4,27 @@
     display: grid
     grid-template-columns: repeat(3, 1fr)
     grid-auto-rows: minmax(100px, auto)
-    justify-content: center
-    text-align: center
     top: 0
     z-index: -1
     img
-        padding: 10%
+        padding: 2%
         image-rendering: pixelated
         transition: transform .2s
     img:hover
         transform: scale(1.1)
+    #container
+        display: flex
+        justify-content: center
+        align-items: center
+
+img.square
+    width: 85%
+    height: 85%
+
+img.tall
+    width: 90%
+
+img.long
+    width: 80%
+    height: 90%
+    padding: 1% 0px
