CV v1.5, HP v1.5 & PF v.1

--- a/src/sass/homepage.sass
+++ b/src/sass/homepage.sass
@@ -7,7 +7,8 @@
 
 #void
     content: " "
-    height: 105vh
+    height: 110vh
+    width: 0%
 
 section
     font-family: 'Coves', sans-serif
@@ -17,12 +18,29 @@ section
     text-transform: uppercase
     color: #EEE
     margin: 0px 25%
-    back
 
 hr
     width: 45%
 
 #contact
-    margin: 5% 0px
+    padding: 5% 0px
     justify-content: space-around
     display: flex
+
+#collinesBG
+    height: 10vh
+    width: 100%
+    background: linear-gradient(0deg, rgba(8,8,8,1) 0%, rgba(17,17,17,0.0) 100%)
+    position: relative
+    z-index: -1
+
+#groundTop
+    content: " "
+    height: 5vh
+    width: 100%
+    border-radius: 100% 100% 0% 0%
+    background: #080808
+
+#ground
+    background: #080808
+    padding-top: 2%
