--- a/src/sass/pf.sass
+++ b/src/sass/pf.sass
@@ -6,25 +6,20 @@
     grid-auto-rows: minmax(100px, auto)
     top: 0
     z-index: -1
-    img
-        padding: 2%
-        image-rendering: pixelated
-        transition: transform .2s
-    img:hover
-        transform: scale(1.1)
     #container
-        display: flex
-        justify-content: center
-        align-items: center
-
-img.square
-    width: 85%
-    height: 85%
-
-img.tall
-    width: 90%
-
-img.long
-    width: 80%
-    height: 90%
-    padding: 1% 0px
+        height: 50vh
+        #child
+            width: 100%
+            height: 100%
+            background-position: center
+            background-repeat: no-repeat
+            transition: all .6s
+        .center
+            background-size: 70%
+        .center:hover
+            background-size: 90%
+        .cover
+            background-size: 100%
+        .cover:hover
+            background-size: 120%
+    
