--- a/src/sass/projet.sass
+++ b/src/sass/projet.sass
@@ -11,30 +11,7 @@ h2
         margin-top: 5%
         margin-bottom: 5%
 
-#content-l
-    background-color: rgba(255, 255, 255, 0.1)
-    border-radius: 20px
-    padding: 5%
-    display: flex
-    margin: 2% 10%
-    img
-        width: 40vh
-        height: 40vh
-        margin: 2%
-    h1
-        margin-top: 7%
-        color: #eee
-        font-size: 2em
-        font-weight: 800
-    h3
-        font-weight: 500
-    section
-        color: #BBB
-    #text
-        width: 50%
-        margin-left: 10%
-
-#content-r
+#content-l, #content-r
     background-color: rgba(180, 180, 180, 0.1)
     border-radius: 20px
     padding: 5%
@@ -51,8 +28,17 @@ h2
         font-weight: 800
     h3
         font-weight: 500
+    h4
+        color: #BBB
     section
         color: #BBB
+        height: 50%
+    #text
+        width: 50%
+        margin-left: 10%
+
+#content-r
+    background-color: rgba(180, 180, 180, 0.1)
     #text
         width: 50%
         margin-right: 10%
@@ -70,3 +56,10 @@ hr
 
 .comming
     color: #f5a295
+
+a
+    text-decoration: none
+    color: #AAA
+
+a:hover
+    color: #EEE
