--- a/src/sass/pf.sass
+++ b/src/sass/pf.sass
@@ -1,14 +1,18 @@
-#grid
+#general
     position: absolute
+    top: 0
+    z-index: -1
+    width: 100%
+    
+#grid
     width: 100%
     display: grid
     grid-template-columns: repeat(3, 1fr)
     grid-auto-rows: minmax(100px, auto)
-    top: 0
-    z-index: -1
     #container
         height: 50vh
         #child
+            contain: " "
             width: 100%
             height: 100%
             background-position: center
@@ -22,4 +26,9 @@
             background-size: 100%
         .cover:hover
             background-size: 120%
+
+#paBG, #photoBG, #modBG
+    height: 60vh
+    width: 100%
+    background-color: #1a1a1a
     
