Font and minor update

--- a/src/sass/cv.sass
+++ b/src/sass/cv.sass
@@ -1,25 +1,17 @@
 @font-face
-    font-family: 'Coves'
+    font-family: 'CovesL'
     src: url("@/assets/font/Coves Light.otf") format("opentype")
-    font-weight: 300
     font-style: normal
 
 @font-face
-    font-family: 'Cove'
-    src: url("@/assets/font/Coves Light.otf") format("opentype")
-    font-weight: 200
-
-@font-face
-    font-family: 'Coves'
+    font-family: 'CovesB'
     src: url("@/assets/font/Coves Bold.otf") format("opentype")
-    font-weight: 700
-    font-weight: bold
-
-@font-face
-    font-family: 'Coves'
-    src: url("@/assets/font/Coves Bold.otf") format("opentype")
-    font-weight: 500
     font-weight: normal
+
+@font-face
+    font-family: 'VLANÈLLA'
+    src: url("@/assets/font/VLANÈLLA REGULAR.ttf") format("truetype")
+    font-style: normal
 
 // ==========
 
@@ -33,7 +25,7 @@
 // ==========
 
 .section
-    font-family: 'Coves', sans-serif
+    font-family: 'CovesL', sans-serif
     align-items: center
     text-align: center
     min-height: 90vh
@@ -45,29 +37,29 @@
 // ==========
 
 h1
-    font-family: 'Coves', sans-serif
+    font-family: 'VLANÈLLA', sans-serif
     font-weight: bold
-    font-size: 4.5em
+    font-size: 1.5em
     padding-top: 1%
     margin: 2%
 
 h2
-    font-family: 'Coves', sans-serif
+    font-family: 'VLANÈLLA', sans-serif
     font-weight: 500
-    font-size: 3.5em
+    font-size: 1em
     padding-top: 0.5%
     color: #DDD
     margin: 2%
 
 h3
-    font-family: 'Coves', sans-serif
+    font-family: 'CovesB', sans-serif
     font-size: 2em
     padding-top: 0.5%
     color: #DDD
     margin: 2%
 
 h4
-    font-family: 'Coves', sans-serif
+    font-family: 'CovesL', sans-serif
     font-size: 1.5em
     padding-top: 0.1%
     color: #CCC
