--- a/src/sass/homepage.sass
+++ b/src/sass/homepage.sass
@@ -1,3 +1,8 @@
+@font-face
+    font-family: 'VLANÈLLAOL'
+    src: url("@/assets/font/VLANÈLLA OUTLINE.ttf") format("truetype")
+    font-style: normal
+
 #webglHP
     position: fixed
     top: 0
@@ -8,16 +13,14 @@
 #void
     content: " "
     height: 110vh
-    width: 0%
-
-section
-    font-family: 'Coves', sans-serif
-    align-items: center
+    width: 100%
     text-align: center
-    position: relative
-    text-transform: uppercase
-    color: #EEE
-    margin: 0px 25%
+
+h1
+    color: #eee
+    font-weight: 500
+    font-family: "VLANÈLLAOL"
+    padding-top: 50vh
 
 hr
     width: 45%
@@ -26,21 +29,3 @@ hr
     padding: 5% 0px
     justify-content: space-around
     display: flex
-
-#collinesBG
-    height: 10vh
-    width: 100%
-    background: linear-gradient(0deg, rgba(8,8,8,1) 0%, rgba(17,17,17,0.0) 100%)
-    position: relative
-    z-index: -1
-
-#groundTop
-    content: " "
-    height: 5vh
-    width: 100%
-    border-radius: 100% 100% 0% 0%
-    background: #080808
-
-#ground
-    background: #080808
-    padding-top: 2%
