--- a/src/sass/pf.sass
+++ b/src/sass/pf.sass
@@ -1,9 +1,15 @@
+@font-face
+    font-family: 'Charley'
+    src: url("@/assets/font/CHARLEY.otf") format("opentype")
+    font-weight: 500
+    font-style: normal
+
 #general
     position: absolute
     top: 0
     z-index: -1
     width: 100%
-    
+
 #grid
     width: 100%
     display: grid
@@ -31,4 +37,10 @@
     height: 60vh
     width: 100%
     background-color: #1a1a1a
-    
+    text-align: center
+    h2
+        margin: 0px
+        padding-top: 13%
+        font-family: "Charley"
+        font-size: 6em
+        color: #EEE
