--- a/src/sass/projet.sass
+++ b/src/sass/projet.sass
@@ -1,9 +1,33 @@
+@font-face
+    font-family: 'CovesL'
+    src: url("@/assets/font/Coves Light.otf") format("opentype")
+    font-style: normal
+
+@font-face
+    font-family: 'CovesB'
+    src: url("@/assets/font/Coves Bold.otf") format("opentype")
+    font-weight: normal
+
+@font-face
+    font-family: 'VLANÈLLA'
+    src: url("@/assets/font/VLANÈLLA REGULAR.ttf") format("truetype")
+    font-style: normal
+
+@font-face
+    font-family: 'VLANÈLLA OUT'
+    src: url("@/assets/font/VLANÈLLA OUTLINE.ttf") format("truetype")
+    font-style: normal
+
 h2
     text-align: center
     color: #eee
     margin-top: 5%
+    font-family: ""
 
 #contact
+    h2
+        font-family: "VLANÈLLA"
+        font-size: 1em
     img
         display: block
         margin-left: auto
@@ -24,18 +48,24 @@ h2
     h1
         margin-top: 7%
         color: #eee
-        font-size: 2em
+        font-size: 1em
         font-weight: 800
+        font-family: "VLANÈLLA"
     h3
+        margin-top: 3%
         font-weight: 500
+        font-size: 0.5em
+        font-family: "VLANÈLLA OUT"
     h4
         color: #BBB
+        font-family: "CovesB"
     section
         color: #BBB
         height: 50%
     #text
         width: 50%
         margin-left: 10%
+        font-family: "CovesL"
 
 #content-r
     background-color: rgba(180, 180, 180, 0.1)
