--- a/src/sass/homepage.sass
+++ b/src/sass/homepage.sass
@@ -29,3 +29,13 @@ hr
     padding: 5% 0px
     justify-content: space-around
     display: flex
+    img
+        max-width: 100%
+        transform: scale(1.2)
+        transition: all .3s
+        filter: blur(3px)
+        opacity: 0.2
+    img:hover
+        filter: blur(0px)
+        opacity: 1
+        transform: greyscale(1)
