--- a/src/sass/pf.sass
+++ b/src/sass/pf.sass
@@ -44,3 +44,25 @@
         font-family: "Charley"
         font-size: 6em
         color: #EEE
+#footer
+    h2
+        text-align: center
+        margin: 0px
+        padding-top: 2%
+        font-family: "Charley"
+        font-size: 3em
+        color: #EEE
+
+#contact
+        padding: 5%
+        text-align: center
+        a
+            img
+                width: 10%
+                transition: all .3s
+                filter: blur(3px)
+                opacity: 0.5
+            img:hover
+                filter: blur(0px)
+                opacity: 1
+                transform: greyscale(1)
