--- a/src/sass/projet.sass
+++ b/src/sass/projet.sass
@@ -24,16 +24,23 @@ h2
     margin-top: 5%
     font-family: ""
 
-#contact
+#footer
     h2
         font-family: "VLANÈLLA"
         font-size: 1em
-    img
-        display: block
-        margin-left: auto
-        margin-right: auto
-        margin-top: 5%
-        margin-bottom: 5%
+    #contact
+        padding: 10% 5%
+        text-align: center
+        a
+            img
+                transform: scale(2)
+                transition: all .3s
+                filter: blur(3px)
+                opacity: 0.5
+            img:hover
+                filter: blur(0px)
+                opacity: 1
+                transform: greyscale(1)
 
 #content-l, #content-r
     background-color: rgba(180, 180, 180, 0.1)
