Medium-Responsive & Minor updates

--- a/src/sass/cv.sass
+++ b/src/sass/cv.sass
@@ -164,11 +164,11 @@ hr
 @media screen and (max-width: 900px) and (min-width: 600px)
 
     h1
-        font-size: 4em
+        font-size: 1.5em
         padding-top: 15%
 
     h2
-        font-size: 3em
+        font-size: 1em
         padding-top: 5%
 
     h3
@@ -179,75 +179,43 @@ hr
         font-size: 1em
         padding-top: 1%
 
+    .whiteBG
+        margin-left: 20%
+        margin-right: 20%
+
     #prog
         h2
             padding-top: 10%
+            font-size: 0.7em
 
-    #diplome
+    #diplome, #projet, #pro
         h2
             padding-top: 10%
+            font-size: 0.7em
         section
-            margin-top: 10%
-            right: 0%
+            margin-top: 15%
             h3
                 font-size: 2em
             h4
-                font-size: 1.5em
-        section:nth-child(odd)
-            left: 0%
-
-    #projet
-        h2
-            padding-top: 10%
-        section
-            margin-top: 4%
-            right: 0%
-            h3
-                font-size: 2em
-            h4
-                font-size: 1.5em
-                a
-                    img
-                        width: 5%
-        section:nth-child(odd)
-            left: 0%
-
-    #pro
-        h2
-            padding-top: 10%
-        section
-            margin-top: 10%
-            right: 0%
-            h3
-                font-size: 2em
-            h4
-                font-size: 1.5em
-        section:nth-child(odd)
-            left: 0%
-
-    #hobbies
-        h2
-            padding-top: 10%
-        section
-            margin-top: 7%
-        section:nth-child(odd)
-            left: 17.5%
+                font-size: 1em
 
     #footer
         h2
-            padding-top: 10%
-        #logo
-            margin-top: 20%
-            img
-                width: 25vh
+            padding-top: 5%
+            font-size: 0.7em
+        #contact
+            a
+                img
+                    transform: scale(1.5)
 
 @media screen and (max-width: 600px)
+
     h1
-        font-size: 4em
+        font-size: 1em
         padding-top: 10%
 
     h2
-        font-size: 3em
+        font-size: 0.8em
         padding-top: 7%
 
     h3
@@ -258,64 +226,36 @@ hr
         font-size: 1em
         padding-top: 1%
 
+    .whiteBG
+        margin-left: 10%
+        margin-right: 10%
+
+    .section
+        min-height: 70vh
+
     #prog
         h2
-            padding-top: 15%
+            padding-top: 10%
+            font-size: 0.6em
+        table
+            font-size: 0.8em
 
-    #diplome
+    #diplome, #projet, #pro
         h2
             padding-top: 10%
+            font-size: 0.6em
         section
             margin-top: 10%
-            right: 0%
             h3
-                font-size: 1.7em
+                font-size: 1.5em
             h4
-                font-size: 1.3em
-        section:nth-child(odd)
-            left: 0%
-
-    #projet
-        h2
-            padding-top: 15%
-        section
-            margin-top: 3%
-            right: 0%
-            h3
-                font-size: 1.7em
-            h4
-                font-size: 1.3em
-                a
-                    img
-                        width: 7%
-        section:nth-child(odd)
-            left: 0%
-
-    #pro
-        h2
-            padding-top: 15%
-        section
-            margin-top: 10%
-            right: 0%
-            h3
-                font-size: 1.7em
-            h4
-                font-size: 1.3em
-        section:nth-child(odd)
-            left: 0%
-
-    #hobbies
-        h2
-            padding-top: 15%
-        section
-            margin-top: 7%
-        section:nth-child(odd)
-            left: 17.5%
+                font-size: 1em
 
     #footer
         h2
-            padding-top: 15%
-        #logo
-            margin-top: 25%
-            img
-                width: 25vh
+            padding-top: 10%
+            font-size: 0.5em
+        #contact
+            a
+                img
+                    transform: scale(1.3)
