--- a/src/sass/pf.sass
+++ b/src/sass/pf.sass
@@ -66,3 +66,59 @@
                 filter: blur(0px)
                 opacity: 1
                 transform: greyscale(1)
+
+@media screen and (max-width: 900px) and (min-width: 600px)
+
+    #paBG, #photoBG, #modBG
+        h2
+            padding-top: 30%
+            font-size: 4.5em
+    
+    #contact
+        a
+            img
+                width: 20%
+
+    #footer
+        h2
+            font-size: 2.5em
+
+    #grid
+        #container
+            #child
+            .center
+                background-size: 95%
+            .center:hover
+                background-size: 115%
+            .cover
+                background-size: 180%
+            .cover:hover
+                background-size: 200%
+
+@media screen and (max-width: 600px)
+
+    #paBG, #photoBG, #modBG
+        h2
+            padding-top: 50%
+            font-size: 3em
+    
+    #contact
+        a
+            img
+                width: 30%
+
+    #footer
+        h2
+            font-size: 2em
+
+    #grid
+        #container
+            #child
+            .center
+                background-size: 95%
+            .center:hover
+                background-size: 115%
+            .cover
+                background-size: 220%
+            .cover:hover
+                background-size: 240%
