--- a/src/sass/projet.sass
+++ b/src/sass/projet.sass
@@ -24,24 +24,6 @@ h2
     margin-top: 5%
     font-family: ""
 
-#footer
-    h2
-        font-family: "VLANÈLLA"
-        font-size: 1em
-    #contact
-        padding: 10% 5%
-        text-align: center
-        a
-            img
-                transform: scale(2)
-                transition: all .3s
-                filter: blur(3px)
-                opacity: 0.5
-            img:hover
-                filter: blur(0px)
-                opacity: 1
-                transform: greyscale(1)
-
 #content-l, #content-r
     background-color: rgba(180, 180, 180, 0.1)
     border-radius: 20px
@@ -49,8 +31,8 @@ h2
     display: flex
     margin: 2% 10%
     img
-        width: 40vh
-        height: 40vh
+        width: 30%
+        height: 30%
         margin: 2%
     h1
         margin-top: 7%
@@ -77,7 +59,6 @@ h2
 #content-r
     background-color: rgba(180, 180, 180, 0.1)
     #text
-        width: 50%
         margin-right: 10%
 
 hr
@@ -100,3 +81,74 @@ a
 
 a:hover
     color: #EEE
+
+#footer
+    h2
+        font-family: "VLANÈLLA"
+        font-size: 1em
+    #contact
+        padding: 10% 5%
+        text-align: center
+        a
+            img
+                transform: scale(2)
+                transition: all .3s
+                filter: blur(3px)
+                opacity: 0.5
+            img:hover
+                filter: blur(0px)
+                opacity: 1
+                transform: greyscale(1)
+
+@media screen and (max-width: 900px) and (min-width: 600px)
+
+    #content-l, #content-r
+        img
+            width: 30%
+            height: 30%
+            margin-top: 15%
+        h1
+            margin-top: 7%
+            font-size: 0.7em
+        h3
+            margin-top: 3%
+            font-size: 0.2em
+        h4
+            font-size: 0.9em
+        #text
+            font-size: 0.9em
+
+    #footer
+        h2
+            font-size: 0.7em
+        #contact
+            a
+                img
+                    transform: scale(1.5)
+
+@media screen and (max-width: 600px)
+
+    #content-l, #content-r
+        width: auto
+        img
+            display: none
+        h1
+            margin-top: 7%
+            font-size: 0.5em
+        h3
+            margin-top: 3%
+            font-size: 0.2em
+        h4
+            font-size: 0.9em
+        #text
+            font-size: 0.9em
+        section
+            height: auto
+
+    #footer
+        h2
+            font-size: 0.5em
+        #contact
+            a
+                img
+                    transform: scale(1.3)
