--- a/src/sass/projet.sass
+++ b/src/sass/projet.sass
@@ -34,6 +34,9 @@ h2
         width: 30%
         height: 30%
         margin: 2%
+    .border
+        border: 1px solid black
+        box-shadow: 0px 0px 20px 10px #111
     h1
         margin-top: 7%
         color: #eee
