Lower quality of images & Change Font name

--- a/src/sass/cv.sass
+++ b/src/sass/cv.sass
@@ -10,7 +10,7 @@
 
 @font-face
     font-family: 'VLANÈLLA'
-    src: url("@/assets/font/VLANÈLLA REGULAR.ttf") format("truetype")
+    src: url("@/assets/font/Vlanella_regular.otf") format("opentype")
     font-style: normal
 
 // ==========
@@ -157,7 +157,6 @@ hr
                 filter: blur(0px)
                 opacity: 1
                 transform: greyscale(1)
-    
 
 // ==========   
 
