--- a/src/sass/homepage.sass
+++ b/src/sass/homepage.sass
@@ -1,6 +1,6 @@
 @font-face
     font-family: 'VLANÈLLAOL'
-    src: url("@/assets/font/VLANÈLLA OUTLINE.ttf") format("truetype")
+    src: url("@/assets/font/Vlanella_outline.otf") format("opentype")
     font-style: normal
 
 #webglHP
