--- a/src/sass/projet.sass
+++ b/src/sass/projet.sass
@@ -10,12 +10,12 @@
 
 @font-face
     font-family: 'VLANÈLLA'
-    src: url("@/assets/font/VLANÈLLA REGULAR.ttf") format("truetype")
+    src: url("@/assets/font/Vlanella_regular.otf") format("opentype")
     font-style: normal
 
 @font-face
     font-family: 'VLANÈLLA OUT'
-    src: url("@/assets/font/VLANÈLLA OUTLINE.ttf") format("truetype")
+    src: url("@/assets/font/Vlanella_outline.otf") format("opentype")
     font-style: normal
 
 h2
