--- a/src/sass/pf.sass
+++ b/src/sass/pf.sass
@@ -4,6 +4,13 @@
     font-weight: 500
     font-style: normal
 
+#app
+    background-image: url("@/assets/globalBackground.png")
+    background-position: center
+    background-repeat: no-repeat
+    background-size: cover
+    background-attachment: fixed
+
 #general
     position: absolute
     top: 0
@@ -79,8 +86,8 @@
         img
             width: 10%
             transition: all .3s
-            filter: blur(3px)
-            opacity: 0.5
+            filter: blur(2px)
+            opacity: 0.7
         img:hover
             filter: blur(0px)
             opacity: 1
@@ -213,7 +220,6 @@
                 background-size: 100%
             .cover:hover
                 background-size: 120%
-
 
 @media screen and (max-width: 2560px) and (min-width: 1921px)
     #paBG, #photoBG, #modBG
