--- a/src/sass/projet.sass
+++ b/src/sass/projet.sass
@@ -25,7 +25,7 @@ h2
     font-family: ""
 
 #content-l, #content-r
-    background-color: rgba(180, 180, 180, 0.1)
+    background-color: rgba(20, 20, 20, 0.7)
     border-radius: 20px
     padding: 5%
     display: flex
@@ -35,8 +35,8 @@ h2
         height: 30%
         margin: 2%
     .border
-        border: 1px solid black
-        box-shadow: 0px 0px 20px 10px #111
+        border: 3px solid black
+        box-shadow: 0px 0px 50px 20px #111
     h1
         margin-top: 7%
         color: #eee
@@ -60,7 +60,6 @@ h2
         font-family: "CovesL"
 
 #content-r
-    background-color: rgba(180, 180, 180, 0.1)
     #text
         margin-right: 10%
 
@@ -95,8 +94,8 @@ a:hover
             img
                 transform: scale(2)
                 transition: all .3s
-                filter: blur(3px)
-                opacity: 0.5
+                filter: blur(2px)
+                opacity: 0.7
             img:hover
                 filter: blur(0px)
                 opacity: 1
@@ -119,7 +118,8 @@ a:hover
             font-size: 0.9em
             text-align: center
             justify-content: center
-            margin-left: 25%
+            margin-left: 5%
+            width: 90%
         section
             height: auto
 
@@ -145,10 +145,11 @@ a:hover
         h4
             font-size: 0.9em
         #text
-            font-size: 0.9em  
+            font-size: 0.9em
             text-align: center
             justify-content: center
-            margin-left: 25%
+            margin-left: 13%
+            width: 75%
         section
             height: auto
 
@@ -209,7 +210,6 @@ a:hover
             a
                 img
                     transform: scale(2)
-
 
 @media screen and (max-width: 2560px) and (min-width: 1921px)
     #content-l, #content-r
