--- a/src/sass/cv.sass
+++ b/src/sass/cv.sass
@@ -1,12 +1,10 @@
 @font-face
     font-family: 'CovesL'
     src: url("@/assets/font/Coves Light.otf") format("opentype")
-    font-style: normal
 
 @font-face
     font-family: 'CovesB'
     src: url("@/assets/font/Coves Bold.otf") format("opentype")
-    font-weight: normal
 
 @font-face
     font-family: 'VLANÈLLA'
@@ -38,7 +36,7 @@
     min-height: 90vh
     position: relative
     text-transform: uppercase
-    color: #EEE
+    color: #AAA
     margin-bottom: 5%
 
 // ==========
@@ -49,13 +47,14 @@ h1
     font-size: 1.5em
     padding-top: 1%
     margin: 2%
+    color: #EFEFEF
 
 h2
     font-family: 'VLANÈLLA', sans-serif
     font-weight: 500
     font-size: 1em
     padding-top: 0.5%
-    color: #DDD
+    color: #EEE
     margin: 2%
 
 h3
@@ -69,19 +68,27 @@ h4
     font-family: 'CovesL', sans-serif
     font-size: 1.5em
     padding-top: 0.1%
-    color: #CCC
+    color: #AAA
     margin: 1%
 
 a
     position: relative
     text-decoration: none
-    color: gray
+    color: #555
 a:hover
-    color: white
+    color: #EEE
 
 hr
     width: 70%
     margin-bottom: 2%
+
+.italic
+    color: #BBB
+    font-style: italic
+
+.bold
+    font-family: 'CovesB', sans-serif
+    color: #EEE
 
 // ==========
 
@@ -112,6 +119,7 @@ hr
         height: 50%
         font-size: 1.7em
         margin-top: 10vh
+        font-weight: 800
 
 #diplome,#pro,#projet
     h2
@@ -160,7 +168,7 @@ hr
             img
                 transform: scale(2)
                 transition: all .3s
-                filter: blur(2px)
+                filter: blur(0.5px)
                 opacity: 0.7
             img:hover
                 filter: blur(0px)
