--- a/src/sass/projet.sass
+++ b/src/sass/projet.sass
@@ -18,6 +18,9 @@
     src: url("@/assets/font/Vlanella_outline.otf") format("opentype")
     font-style: normal
 
+#content
+    margin-top: 5%
+
 h2
     text-align: center
     color: #eee
