PixelShader & UV Light (BUT THAT DONT F*** WORK L M A O)

--- a/src/sass/hb.sass
+++ b/src/sass/hb.sass
@@ -9,6 +9,18 @@
     left: 0
     outline: none
     z-index: 1
+    background-color: red
+
+#switchMode
+    z-index: 2
+    position: relative
+    top: 10px
+    left: 10px
+    background: rgba(0, 0, 0, 0)
+    color: white
+    border: 1px solid white
+    border-radius: 20px
+    padding: 10px
 
 #void
     content: " "
